--- a/index.html
+++ b/index.html
@@ -1,22 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>protfolio</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Styles/styles.css" />
+  </head>
+  <body>
     <header>
-
+      <nav>
+        <h3 class="nav-title">Ma<span class="orange">r</span>y</h3>
+        <ul>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="orange-button">Hire Me</button></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greeding">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="orange-button">Download CV</button>
+          <button class="orange-button">Contact</button>
+        </div>
+        <img src="Images/hardy.png" alt="hardy picture" />
+      </div>
     </header>
 
     <main>
+      <section class="about">
+        <p class="about-title">About Me</p>
+        <h3 class="about-discription">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </h3>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of bith</h4>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
 
+      <section class="about">
+        <p class="about-title">What I do</p>
+        <h3 class="about-discription">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </h3>
+      </section>
+
+      <div class="skill-container">
+        <div class="skill">
+          <img src="Images/icons/js.png" alt="" />
+          <h3 class="skill-title">Vanilla JavaScript</h3>
+          <p class="skill-description">
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="skill">
+          <img src="Images/icons/react.png" alt="react" />
+          <h3 class="skill-title">react</h3>
+          <p class="skill-description">
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="skill">
+          <img src="Images/icons/nodejs.png" alt="" />
+          <h3 class="skill-title">Node.js</h3>
+          <p class="skill-description">
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+        <div class="skill">
+          <img src="Images/icons/mongo.png" alt="" />
+          <h3 class="skill-title">MongoDB</h3>
+          <p class="skill-description">
+            List skill/technologies here. You can change the icon above to any
+            of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+            ligula eget dolor
+          </p>
+        </div>
+      </div>
+      <!-- Resume Section -->
+      <section>
+        <h3 class="about-title">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-colum">
+            <h3 class="resume-colum-title">My Education</h3>
+            <div class="resume-item">
+              <h3 class="item-title">Master in Computer Engineering</h3>
+              <h2 class="item-sub-title">Harvard University / 2015 2017</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h3 class="item-title">Master in Computer Engineering</h3>
+              <h2 class="item-sub-title">Harvard University / 2015 2017</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h3 class="item-title">Master in Computer Engineering</h3>
+              <h2 class="item-sub-title">Harvard University / 2015 2017</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-colum">
+            <h3 class="resume-colum-title">My Exparience</h3>
+
+            <div class="resume-item">
+              <h3 class="item-title">Sr. Font End Developer</h3>
+              <h2 class="item-sub-title">Apple Inc / 2020 Current</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h3 class="item-title">Jr. Font End Developer</h3>
+              <h2 class="item-sub-title">Dribbble Inc / 2018 2022</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h3 class="item-title">HTML Developer</h3>
+              <h2 class="item-sub-title">Adobe Inc / 2017 2018</h2>
+              <p class="item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="download-cv">
+          <button class="orange-button">Download CV</button>
+        </div>
+      </section>
     </main>
 
     <footer>
-        
+      <div class="footer-column">
+        <h2 class="foot-column-title">Lets Connect</h2>
+        <p class="section-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+          <a href=""><img src="Images/icons/facebook.png" alt="" /></a
+          ><a href=""><img src="Images/icons/insta.png" alt="" /></a
+          ><a href=""><img src="Images/icons/twitter.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h2 class="foot-column-title">Let’s Message me</h2>
+        <form action="" class="contact">
+          <input type="text" placeholder="Your Name">
+          <input type="email" name="" id="" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Your text"></textarea>
+          <input type="submit" value="Submit" class="orange-button">
+        </form>
+      </div>
     </footer>
-    
-</body>
+  </body>
 </html>
