try to responsive

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         </div>
       </section>
 
-      <section class="about">
+      <section class="about ">
         <p class="about-title">What I do</p>
-        <h3 class="about-discription">
+        <h3 id="what-i-do-description" class="about-discription">
           I have more than 10 years experience building software for clients all
           over the world. Below is a quick overview of my main technical skill
           sets and technologies i use. Want to find out more about my
@@ -77,7 +77,7 @@
         </h3>
       </section>
 
-      <div class="skill-container">
+      <div class="skill-container ">
         <div class="skill">
           <img src="Images/icons/js.png" alt="" />
           <h3 class="skill-title">Vanilla JavaScript</h3>
@@ -116,7 +116,7 @@
         </div>
       </div>
       <!-- Resume Section -->
-      <section>
+      <section >
         <h3 class="about-title">A summary of My Resume</h3>
         <div class="resume-container">
           <div class="resume-colum">
